# control-point

./: .gitignore  README.md  enclave.csv  list-data-ranges.ps1  pyproject.toml  sync-data-dump.ps1
.github/: copilot-instructions.md
.github/workflows/: build-site.yml  seed-cache.yml
nb/: debug.dbcnb  duckdb-playground.dbcnb  factions.dbcnb  report.dbcnb
site/: data-access.js  index.css  index.html  index.js  links.js
site/app/: activities.js  app.js  enclave.js  infra-failures-route.js  infra-failures.js  settlement-maps-route.js  settlement-maps.js  settlements-route.js  settlements.js  system-activity-route.js  system-activity.js  system-route.js  system-search.js
site/components/: activity-item.css  activity-item.js  autocomplete.css  autocomplete.js  check-manifest.js  external-links.css  external-links.js  last-updated.css  last-updated.js  route.js  sortable-table.css  sortable-table.js
site/data/: agricultural1.json  agricultural2.json  agricultural3.json  agricultural4.json  agricultural5.json  extraction1.json  extraction2.json  extraction3.json  extraction4.json  extraction5.json  hightech1.json  hightech2.json  hightech3.json  hightech4.json  industrial1.json  industrial2.json  industrial3.json  industrial4.json  industrial5.json  military1.json  military2.json  military3.json  (+7 more)
src/: clean.py  clean_github.py  compress.py  constants.py  db.py  dl_hist.py  dl_today.py  download_cache_r2.py  extract.py  extract_factions.py  go.py  import_.py  localhttp.py  migrate_enums_to_varchar.py  report.py  transform.py  upload_cache_r2.py  upload_r2.py
(+13 files in other folders)
